# ray-tracer

./: .gitignore  CMakeLists.txt  KDtree.cpp  KDtree.h  KDtreeVertex.cpp  KDtreeVertex.h  README.md  colorRGB.h  compile.bat  compile_debug.bat  drawer.cpp  drawer.h  header.h  main.cpp  material.h  object.h  pacs  parcer.h  point.cpp  point.h  polygon.cpp  polygon.h  polygonG.cpp  ray.cpp  ray.h  rayTracer.cpp  rayTracer.h  scene.cpp  scene.h  solve.cpp  sphere.cpp  sphere.h  star.cpp  star.h  tetragon.cpp  tetragon.h  triangle.cpp  triangle.h  vector.cpp  vector.h  (+1 more)
geometry/: point.cpp  polygonG.h  ray.h  sphere.cpp  tetragon.cpp  tetragon.h  triangle.h  vector.h
graphics/: drawer.cpp  drawer.h  encodePng.h
render/: KDtree.cpp  KDtree.h  KDtreeVertex.cpp  KDtreeVertex.h  parcer.h  rayTracer.h  scene.cpp  scene.h  star.h  visualSys.h
